fix bucket icon visibiliyt initial load

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,6 +66,7 @@ h6 {
 --------------------------------------------------------------*/
 .back-to-cart {
   position: fixed;
+  display: none;
   width: 40px;
   height: 40px;
   border-radius: 50px;
